src/deploy/kubernetes/welcome/welcome-board/application/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${_Values_app_name}
spec:
  selector:
    matchLabels:
      app: ${_Values_app_name}
  replicas: 1
  strategy:
    type: Recreate #RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
      labels:
        app: ${_Values_app_name}
    spec:
      imagePullSecrets:
        - name: ${_Values_image_pullSecrets}
      containers:
        - name: ${_Values_app_name}
          image: nginx:1.17.10
          imagePullPolicy: IfNotPresent #Always
          ports:
            - name: transport
              containerPort: ${_Values_service_port}
              protocol: TCP
            - name: jmx
              containerPort: 1099
              protocol: TCP
          volumeMounts:
            - mountPath: /var/log/nginx/logs/
              name: ${_Values_app_name}-applogs
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: ${_Values_app_name}-config-files-volume
            - mountPath: /www/data
              name: ${_Values_app_name}-data-files-volume

      volumes:
        - name: ${_Values_app_name}-applogs
          emptyDir: {}
        - name: ${_Values_app_name}-config-files-volume
          configMap:
            name: ${_Values_app_name}-config-files
        - name: ${_Values_app_name}-data-files-volume
          configMap:
            name: ${_Values_app_name}-data-files
